# finder

./: Cargo.toml  README.md
src/: app.rs  chat.rs  compass.rs  main.rs  markdown.rs  rag.rs  search.rs  ui.rs  update.rs
