[package]
name = "finder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "f"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
nucleo = "0.5"
nucleo-matcher = "0.3"
ignore = "0.4"
unicode-width = "0.2"
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
futures-util = "0.3"
regex = "1"
pulldown-cmark = "0.13"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
